operations/terraform/aws_internet_gateway.tf
# INTERNET GATEWAY
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "gateway"
  }
}
